--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             </div>
             <!--If they click public-->
             <section id="joinpublic" class="mafiagame">
-                <div class="tab-public">
+                <div id = "tab-public" class="tab-game">
                 <h1>They’re Waiting Inside</h1>
                 <div id="roomList"></div>
                 </div>
             </section>
             <section id="joinprivate" class="mafiagame">
-                <div class="tab-private">
+                <div id = "tab-public" class="tab-game">
                 <h2>Shape the Story, Choose the Chaos</h2>
                 <label for="roomcode">Reveal the Code of Entry</label>
                 <input type="text" id="roomcode" name="coderoom"><br><br>
