added a submit button

--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
                     <h2>Welcome to the Public Game</h2>
                 </div>
                 <div class="tab-content" id="private">
+                    <form id="myForm" action="/submit-data" method="post">
                     <h2>Shape the Story, Choose the Chaos</h2>
                     <div class="usercode">
                         <label for="roomcode">Reveal the Code of Entry</label>
                         <input type="text" id="roomcode" name="coderoom">
-                    </div>
+                        <button type="submit">Submit</button>
+
+                    </form>
+                </div>
                 </div>
                 </div>
             </div>
