--- a/index.html
+++ b/index.html
@@ -103,16 +103,18 @@
             <h4>Players Joined:</h4>
             <ul id="playerList"></ul>
 
-            <div class="gamebutton">
-                <button id="startGameBtn" type="button">Start Game</button>
-            </div>
+            
+            <button id="startGameBtn" type="button">Start Game</button>
+            
         </form>
     </section>
 
     <section id="showtime" class="mafiagame">
-        <h2>The job is on. Watch your back.</h2>
+        <h2 id="storylineDisplay"></h2>
+        <p id="gameMessage"></p>
+
         <p>Your Role: <strong id="playerRole"></strong></p>
-        <p>Storyline: <span id="storylineDisplay"></span></p>
+
     </section>
 
     <section id="gametime" class="mafiagame">
